upgraded to java 11 a bit, plus other minor stuff